--- a/Derivations_Bridges/KL_inv_Wishart.tex
+++ b/Derivations_Bridges/KL_inv_Wishart.tex
@@ -11,26 +11,9 @@ width=\figwidth,
 x grid style={white!69!black},
 xmin=-0.45, xmax=9.45,
 xtick style={color=black},
-xtick={-2,0,2,4,6,8,10},
-xticklabels={
-  \(\displaystyle -2\),
-  \(\displaystyle 0\),
-  \(\displaystyle 2\),
-  \(\displaystyle 4\),
-  \(\displaystyle 6\),
-  \(\displaystyle 8\),
-  \(\displaystyle 10\)
-},
 y grid style={white!69!black},
-ymin=2.52, ymax=10.8,
-ytick style={color=black},
-ytick={0,5,10,15},
-yticklabels={
-  \(\displaystyle 0\),
-  \(\displaystyle 5\),
-  \(\displaystyle 10\),
-  \(\displaystyle 15\)
-}
+ymin=0, ymax=10.4,
+ytick style={color=black}
 ]
 \addplot [semithick, black]
 table {%
@@ -47,29 +30,29 @@ table {%
 };
 \addplot [semithick, color0]
 table {%
-0 9.75
-1 5.77
-2 4.18
-3 3.5
-4 3.08
-5 2.89
-6 2.98
-7 3.11
-8 3.34
-9 3.69
+0 5.75
+1 4.83
+2 4.22
+3 3.91
+4 3.73
+5 3.72
+6 3.91
+7 4.1
+8 4.39
+9 4.78
 };
 \addplot [semithick, blue]
 table {%
-0 9.76
-1 8.85
-2 7.78
-3 6.78
-4 6.17
-5 5.6
-6 5.23
-7 5.07
-8 4.94
-9 4.94
+0 10.4
+1 9.75
+2 8.88
+3 8.06
+4 7.58
+5 7.13
+6 6.87
+7 6.78
+8 6.73
+9 6.8
 };
 \end{axis}
 
