cleaning code for arxiv version

--- a/Derivations_Bridges/Exponential Bridge.ipynb
+++ b/Derivations_Bridges/Exponential Bridge.ipynb
@@ -43,7 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exponential Bridge"
+    "# Exponential Bridge\n",
+    "\n",
+    "Set up the approximations in standard and transformed base and create plots for the bridge."
    ]
   },
   {
@@ -5101,7 +5103,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verify the Bridges"
+    "# Verify the Bridges\n",
+    "\n",
+    "Verify that a concatenation of forward and backward transformation yield the identity."
    ]
   },
   {
@@ -5172,7 +5176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical Distance Measures"
+    "# Statistical Distance Measures\n",
+    "\n",
+    "Compare the Laplace approximation of the Distribution in different bases to ensure we actually improve it. We use mean maximum discrepancy (MMD) and KL-divergence as metrics."
    ]
   },
   {
