--- a/Poisson_Experiment/Poisson Experiment.ipynb
+++ b/Poisson_Experiment/Poisson Experiment.ipynb
@@ -28,10 +28,16 @@
     "\n",
     "set_matplotlib_formats(\"pdf\", \"svg\")\n",
     "\n",
-    "#matplotlib.rc(\"font\", **{\"family\": \"serif\", \"serif\": [\"Times Roman\"]})\n",
     "plt.rcParams[\"font.family\"] = \"Times New Roman\"\n",
     "plt.rcParams[\"text.usetex\"] = True\n",
     "plt.rcParams[\"text.latex.preamble\"] = r\"\\usepackage{amsfonts} \\usepackage{amsmath}\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Load and visualize data"
    ]
   },
   {
@@ -3223,6 +3229,13 @@
    ],
    "source": [
     "poisson_vocational_df[poisson_vocational_df['math'] == 57]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Looking at one of the marginal Gamma distributions"
    ]
   },
   {
