--- a/Derivations_Bridges/Beta Bridge.ipynb
+++ b/Derivations_Bridges/Beta Bridge.ipynb
@@ -45,7 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Beta Bridge"
+    "# Beta Bridge\n",
+    "\n",
+    "Set up the approximations in standard and transformed base and create plots for the bridge."
    ]
   },
   {
@@ -4981,7 +4983,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verify the Bridge"
+    "# Verify the Bridge\n",
+    "\n",
+    "Verify that a concatenation of forward and backward transformation yield the identity."
    ]
   },
   {
@@ -5022,7 +5026,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical distance measures"
+    "# Statistical distance measures\n",
+    "\n",
+    "Compare the Laplace approximation of the Distribution in different bases to ensure we actually improve it. We use mean maximum discrepancy (MMD) and KL-divergence as metrics."
    ]
   },
   {
