--- a/Derivations_Bridges/Dirichlet_bridge.ipynb
+++ b/Derivations_Bridges/Dirichlet_bridge.ipynb
@@ -46,7 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dirichlet Bridge"
+    "# Dirichlet Bridge\n",
+    "\n",
+    "Set up the approximations in standard and transformed base and create plots for the bridge."
    ]
   },
   {
@@ -2764,7 +2766,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verify the Bridge"
+    "# Verify the Bridge\n",
+    "\n",
+    "Verify that a concatenation of forward and backward transformation yield the identity."
    ]
   },
   {
@@ -2804,7 +2808,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical distance measures"
+    "# Statistical distance measures\n",
+    "\n",
+    "Compare the Laplace approximation of the Distribution in different bases to ensure we actually improve it. We use mean maximum discrepancy (MMD) and KL-divergence as metrics."
    ]
   },
   {
