--- a/Derivations_Bridges/Gamma_Bridge.ipynb
+++ b/Derivations_Bridges/Gamma_Bridge.ipynb
@@ -45,7 +45,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gamma Distribution Laplace Propagation"
+    "# Gamma Distribution Bridge\n",
+    "\n",
+    "Set up the approximations in standard and transformed base and create plots for the bridge."
    ]
   },
   {
@@ -5727,7 +5729,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verify the Bridges"
+    "# Verify the Bridges\n",
+    "\n",
+    "Verify that a concatenation of forward and backward transformation yield the identity."
    ]
   },
   {
@@ -5809,7 +5813,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical distance measures"
+    "# Statistical distance measures\n",
+    "\n",
+    "Compare the Laplace approximation of the Distribution in different bases to ensure we actually improve it. We use mean maximum discrepancy (MMD) and KL-divergence as metrics."
    ]
   },
   {
