--- a/Derivations_Bridges/Inverse_Gamma_Bridge.ipynb
+++ b/Derivations_Bridges/Inverse_Gamma_Bridge.ipynb
@@ -43,7 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inverse Gamma Distribution"
+    "# Inverse Gamma Distribution\n",
+    "\n",
+    "Set up the approximations in standard and transformed base and create plots for the bridge."
    ]
   },
   {
@@ -5888,7 +5890,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Verify the Bridges"
+    "# Verify the Bridges\n",
+    "\n",
+    "Verify that a concatenation of forward and backward transformation yield the identity."
    ]
   },
   {
@@ -5970,7 +5974,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Statistical distance measures"
+    "# Statistical distance measures\n",
+    "\n",
+    "Compare the Laplace approximation of the Distribution in different bases to ensure we actually improve it. We use mean maximum discrepancy (MMD) and KL-divergence as metrics."
    ]
   },
   {
