--- a/Derivations_Bridges/Dirichlet_bridge.ipynb
+++ b/Derivations_Bridges/Dirichlet_bridge.ipynb
@@ -25390,7 +25390,7 @@
     "def KL_div_samples_dirichlet6(a, num_samples, softmax=False, plot=False, eps=1e-8):\n",
     "    \n",
     "    dirichlet_samples = dirichlet.rvs(a, size=num_samples)\n",
-    "    num_bins = int(np.cbrt(2145)) #third root of num samples\n",
+    "    num_bins = int(np.cbrt(num_samples)) #third root of num samples\n",
     "    \n",
     "    if softmax:\n",
     "    \n",
@@ -27165,7 +27165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -27179,7 +27179,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
